--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>React Time</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" class="loader"></div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
